@@ -5,6 +5,7 @@
         - Firefox 3.5 (3.6 is still supported)
         - SeaMonkey 2.0 (minimum is now 2.1)
     * Add compatibility with SeaMonkey 2.5
+    * Fix QuickWhois being unreadable with some themes
 
 2011-11-25:
     * version 0.8.4
